@@ -323,6 +323,8 @@ static class JavacCompiler {
 			return JavaCore.VERSION_21;
 		} else if(rawVersion.startsWith("22")) {
 			return JavaCore.VERSION_22;
+		} else if(rawVersion.startsWith("23")) {
+			return JavaCore.VERSION_23;
 		} else {
 			throw new RuntimeException("unknown javac version: " + rawVersion);
 		}
@@ -576,6 +578,12 @@ static class JavacCompiler {
 		if (version == JavaCore.VERSION_22) {
 			if ("22".equals(rawVersion)) {
 				return 0000;
+			}
+		}
+		if (version == JavaCore.VERSION_23) {
+			switch(rawVersion) {
+				case "23-ea", "23":
+					return 0000;
 			}
 		}
 		throw new RuntimeException("unknown raw javac version: " + rawVersion);
@@ -1157,7 +1165,7 @@ protected static class JavacTestOptions {
 			JavacBug8204534 = RUN_JAVAC ? // https://bugs.openjdk.java.net/browse/JDK-8204534
 				new JavacHasABug(MismatchType.EclipseErrorsJavacNone, ClassFileConstants.JDK11, 0000) : null,
 			JavacBug8207032 = RUN_JAVAC ? // https://bugs.openjdk.java.net/browse/JDK-8207032
-				new JavacHasABug(MismatchType.EclipseErrorsJavacNone) : null,
+				new JavacHasABug(MismatchType.EclipseErrorsJavacNone, ClassFileConstants.JDK11, 0000) : null,
 			JavacBug8044196 = RUN_JAVAC ? // likely https://bugs.openjdk.java.net/browse/JDK-8044196, intermittently masked by https://bugs.openjdk.java.net/browse/JDK-8029161
 				new JavacHasABug(MismatchType.EclipseErrorsJavacNone, ClassFileConstants.JDK9, 0000, true) : null,
 			JavacBug6337964 = RUN_JAVAC ? // https://bugs.eclipse.org/bugs/show_bug.cgi?id=112433
@@ -1172,7 +1180,10 @@ protected static class JavacTestOptions {
 					new JavacBug8226510(" --release 12 --enable-preview -Xlint:-preview") : null,
 		    JavacBug8299416 = RUN_JAVAC ? // https://bugs.openjdk.java.net/browse/JDK-8299416
 					new JavacBugExtraJavacOptionsPlusMismatch(" --release 20 --enable-preview -Xlint:-preview",
-							MismatchType.EclipseErrorsJavacNone| MismatchType.EclipseErrorsJavacWarnings) : null;
+							MismatchType.EclipseErrorsJavacNone| MismatchType.EclipseErrorsJavacWarnings) : null,
+		    JavacBug8336255 = RUN_JAVAC ? // https://bugs.openjdk.org/browse/JDK-8336255
+					new JavacBugExtraJavacOptionsPlusMismatch(" --release 23 --enable-preview -Xlint:-preview",
+							MismatchType.JavacErrorsEclipseNone) : null;
 
 		// bugs that have been fixed but that we've not identified
 		public static JavacHasABug
